# ot-controller

./: .clippy.toml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .redocly.yaml  .yamllint.yaml  CHANGELOG.md  Cargo.toml  DB_MIGRATIONS.md  Dockerfile-bookworm  Dockerfile-noble  README.md  REUSE.toml  deny.toml  diesel.toml  flake.nix  justfile  renovate.json
.reuse/: dep5
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/chat/: Cargo.toml
crates/chat/src/: incoming.rs  lib.rs  outgoing.rs  participant_pair.rs  storage.rs
crates/chat/src/storage/: chat_storage.rs  mod.rs  redis.rs
crates/chat/src/storage/volatile/: memory.rs  storage.rs
crates/chat/tests/: integration.rs
crates/ci-doc-updater/: Cargo.toml
crates/ci-doc-updater/src/: analyze.rs  generate.rs  main.rs
crates/client/: Cargo.toml
crates/client-shared/: Cargo.toml
crates/client-shared-impl/: Cargo.toml
crates/client-shared-impl/src/: lib.rs  query_field.rs  request.rs
crates/client-shared/src/: api_error.rs  authorization.rs  client.rs  data_option.rs  lib.rs  query.rs  request.rs  request_body.rs
crates/client-shared/src/request/: authorized.rs  from_http_response.rs  to_http_request.rs  with_authorization.rs
crates/client/examples/: get_login.rs  get_room_event_information.rs
crates/client/src/: client.rs  lib.rs  open_talk_api_client.rs
crates/community-modules/: Cargo.toml
crates/community-modules/src/: lib.rs
crates/controller/: Cargo.toml
crates/controller-core/: Cargo.toml  build.rs
crates/controller-core/src/: acl.rs  caches.rs  lib.rs  metrics.rs  settings.rs  swagger.rs  trace.rs
crates/controller-core/src/api/: headers.rs  mod.rs  responses.rs
crates/controller-core/src/api/internal/: rooms.rs
crates/controller-core/src/api/signaling/: mod.rs  resumption.rs  storage.rs  ticket.rs
crates/controller-core/src/api/upload/: mod.rs  ws.rs
crates/controller-core/src/cli/: acl.rs  fix_acl.rs  jobs.rs  mod.rs  modules.rs  reload.rs  streaming.rs  tariffs.rs  tenants.rs
crates/controller-core/src/oidc/: claims.rs  http.rs  jwt.rs  mod.rs  provider.rs
crates/controller-core/src/services/: mail.rs  mod.rs
crates/controller-main/: Cargo.toml
crates/controller-main/src/: main.rs
crates/controller-settings/: Cargo.toml
crates/controller-settings/src/: lib.rs
crates/controller-utils/: Cargo.toml
crates/controller-utils/src/: lib.rs
crates/controller-utils/src/deletion/: deleter.rs  error.rs  event.rs  mod.rs  room.rs  shared_folders.rs  user.rs
crates/controller/src/: caches.rs  lib.rs  metrics.rs  redis_wrapper.rs  settings.rs  trace.rs
crates/controller/src/api/: mod.rs
crates/controller/src/cli/: acl.rs  fix_acl.rs  jobs.rs  mod.rs  modules.rs  tariffs.rs  tenants.rs
crates/controller/src/oidc/: claims.rs  jwt.rs  mod.rs  provider.rs
crates/controller/src/services/: mail.rs
crates/controller/src/storage/: assets.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: db.rs  lib.rs  metrics.rs
crates/db-storage/: Cargo.toml
crates/db-storage/src/: assets.rs  groups.rs  invites.rs  jobs.rs  lib.rs  macros.rs  module_resources.rs  rooms.rs  schema.rs  sip_configs.rs  streaming_services.rs  streaming_targets.rs  tariffs.rs  tenants.rs  users.rs  utils.rs
crates/db-storage/src/events/: email_invites.rs  mod.rs  shared_folders.rs
crates/db-storage/src/legal_votes/: mod.rs
crates/db-storage/src/migrations/: V24__event_revision.sql  V26__module_resources.sql  V29__cascade_sip_config.sql  V30__update_disabled_features.sql  V32__update_email_case.sql  V34__update_recurrence_pattern.sql  V35__asset_size.sql  V35__streaming_kind.sql  V36__email_invite_roles.sql  V36__streaming_services.sql  V40__sync_files_job.sql  V42__disabled_user.sql  V43__keycloak_account_sync_job.sql  V45__room_e2e_encryption.sql  mod.rs
crates/db-storage/tests/: common.rs  find_user.rs  get_events.rs
crates/diesel-newtype/: Cargo.toml  README.md
crates/diesel-newtype-impl/: Cargo.toml  README.md
crates/diesel-newtype-impl/src/: lib.rs
crates/diesel-newtype/src/: lib.rs
crates/etherpad-client/: Cargo.toml
crates/etherpad-client/src/: lib.rs
crates/integration/: Cargo.toml
crates/integration/src/: lib.rs
crates/janus-client/: Cargo.toml
crates/janus-client/src/: client.rs  lib.rs  macros.rs
crates/janus-client/src/types/: mod.rs
crates/janus-client/tests/: integration_test.rs
crates/janus-media/: Cargo.toml
crates/janus-media/src/: exchange.rs  focus.rs  incoming.rs  lib.rs  outgoing.rs  sessions.rs  settings.rs  storage.rs
crates/janus-media/src/mcu/: mod.rs  types.rs
crates/janus-media/src/storage/: media_storage.rs  mod.rs  participant.rs  presenter.rs  redis.rs  speaker.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: error.rs  events.rs  lib.rs  users.rs
crates/jobs/src/distributed/: executor_task.rs  job_queue.rs
crates/jobs/src/jobs/: adhoc_event_cleanup.rs  event_cleanup.rs  invite_cleanup.rs  keycloak_account_sync.rs  mod.rs  room_cleanup.rs  self_check.rs  sync_storage_files.rs  user_cleanup.rs
crates/keycloak-admin/: Cargo.toml
crates/keycloak-admin/src/: lib.rs  users.rs
crates/kustos/: Cargo.toml  README.md
crates/kustos-prefix/: Cargo.toml
crates/kustos-prefix-impl/: Cargo.toml
crates/kustos-prefix-impl/src/: lib.rs
crates/kustos-prefix/src/: lib.rs
crates/kustos-shared/: Cargo.toml
crates/kustos-shared/src/: access.rs  error.rs  lib.rs  policies_builder.rs  policy.rs  resource.rs  subject.rs
crates/kustos-shared/src/internal/: impls.rs
crates/kustos/src/: error.rs  lib.rs  metrics.rs  policies_builder.rs  policy.rs  prelude.rs  subject.rs
crates/kustos/src/actix_web/: middleware.rs  mod.rs
crates/kustos/src/db/: casbin.rs
crates/kustos/src/internal/: custom_matcher.rs  diesel_adapter.rs  impls.rs  mod.rs  rbac_api_ex.rs  synced_enforcer.rs
crates/kustos/tests/: disallow_allow.rs
crates/lapin-pool/: Cargo.toml
crates/lapin-pool/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: db_schema.rs  main.rs
(+1562 files in other folders)
