# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
authors = ["OpenTalk Team <mail@opentalk.eu>"]
homepage = "https://opentalk.eu/"
repository = "https://gitlab.opencode.de/opentalk/controller"
version = "0.29.0-alpha"

[workspace.dependencies]
kustos = { path = "crates/kustos", version = "0.29.0-alpha" }
kustos-shared = { path = "crates/kustos-shared", version = "0.29.0-alpha" }
opentalk-api-client = { path = "crates/opentalk-api-client", version = "0.29.0-alpha" }
opentalk-cache = { path = "crates/opentalk-cache", version = "0.29.0-alpha" }
opentalk-client-shared = { path = "crates/opentalk-client-shared", version = "0.29.0-alpha" }
opentalk-community-signaling-modules = { path = "crates/opentalk-community-signaling-modules", version = "0.29.0-alpha" }
opentalk-controller-core = { path = "crates/opentalk-controller-core", version = "0.29.0-alpha" }
opentalk-controller-service = { path = "crates/opentalk-controller-service", version = "0.29.0-alpha" }
opentalk-controller-service-facade = { path = "crates/opentalk-controller-service-facade", version = "0.29.0-alpha" }
opentalk-controller-settings = { path = "crates/opentalk-controller-settings", version = "0.29.0-alpha" }
opentalk-controller-utils = { path = "crates/opentalk-controller-utils", version = "0.29.0-alpha" }
opentalk-database = { path = "crates/opentalk-database", version = "0.29.0-alpha" }
opentalk-db-storage = { path = "crates/opentalk-db-storage", version = "0.29.0-alpha" }
opentalk-jobs = { path = "crates/opentalk-jobs", version = "0.29.0-alpha" }
opentalk-kustos-prefix = { path = "crates/opentalk-kustos-prefix", version = "0.29.0-alpha" }
opentalk-kustos-prefix-impl = { path = "crates/opentalk-kustos-prefix-impl", version = "0.29.0-alpha" }
opentalk-log = { path = "crates/opentalk-log", version = "0.29.0-alpha" }
opentalk-mail-worker-protocol = { path = "crates/opentalk-mail-worker-protocol", version = "0.29.0-alpha" }
opentalk-r3dlock = { path = "crates/opentalk-r3dlock", version = "0.29.0-alpha" }
opentalk-signaling-core = { path = "crates/opentalk-signaling-core", version = "0.29.0-alpha" }
opentalk-signaling-module-chat = { path = "crates/opentalk-signaling-module-chat", version = "0.29.0-alpha" }
opentalk-signaling-module-core = { path = "crates/opentalk-signaling-module-core", version = "0.29.0-alpha" }
opentalk-signaling-module-integration = { path = "crates/opentalk-signaling-module-integration", version = "0.29.0-alpha" }
opentalk-signaling-module-livekit = { path = "crates/opentalk-signaling-module-livekit", version = "0.29.0-alpha" }
opentalk-signaling-module-meeting-notes = { path = "crates/opentalk-signaling-module-meeting-notes", version = "0.29.0-alpha" }
opentalk-signaling-module-meeting-report = { path = "crates/opentalk-signaling-module-meeting-report", version = "0.29.0-alpha" }
opentalk-signaling-module-polls = { path = "crates/opentalk-signaling-module-polls", version = "0.29.0-alpha" }
opentalk-signaling-module-shared-folder = { path = "crates/opentalk-signaling-module-shared-folder", version = "0.29.0-alpha" }
opentalk-signaling-module-subroom-audio = { path = "crates/opentalk-signaling-module-subroom-audio", version = "0.29.0-alpha" }
opentalk-signaling-module-timer = { path = "crates/opentalk-signaling-module-timer", version = "0.29.0-alpha" }
opentalk-signaling-module-whiteboard = { path = "crates/opentalk-signaling-module-whiteboard", version = "0.29.0-alpha" }
opentalk-test-util = { path = "crates/opentalk-test-util", version = "0.29.0-alpha" }
opentalk-types = { path = "crates/opentalk-types", version = "0.29.0-alpha" }
opentalk-types-api-v1 = { path = "crates/opentalk-types-api-v1", version = "0.29.0-alpha" }
opentalk-types-common = { path = "crates/opentalk-types-common", version = "0.29.0-alpha" }
opentalk-types-signaling = { path = "crates/opentalk-types-signaling", version = "0.29.0-alpha" }
opentalk-types-signaling-breakout = { path = "crates/opentalk-types-signaling-breakout", version = "0.29.0-alpha" }
opentalk-types-signaling-chat = { path = "crates/opentalk-types-signaling-chat", version = "0.29.0-alpha" }
opentalk-types-signaling-control = { path = "crates/opentalk-types-signaling-control", version = "0.29.0-alpha" }
opentalk-types-signaling-livekit = { path = "crates/opentalk-types-signaling-livekit", version = "0.29.0-alpha" }
opentalk-types-signaling-meeting-notes = { path = "crates/opentalk-types-signaling-meeting-notes", version = "0.29.0-alpha" }
opentalk-types-signaling-meeting-report = { path = "crates/opentalk-types-signaling-meeting-report", version = "0.29.0-alpha" }
opentalk-types-signaling-moderation = { path = "crates/opentalk-types-signaling-moderation", version = "0.29.0-alpha" }
opentalk-types-signaling-polls = { path = "crates/opentalk-types-signaling-polls", version = "0.29.0-alpha" }
opentalk-types-signaling-recording = { path = "crates/opentalk-types-signaling-recording", version = "0.29.0-alpha" }
opentalk-types-signaling-recording-service = { path = "crates/opentalk-types-signaling-recording-service", version = "0.29.0-alpha" }
opentalk-types-signaling-shared-folder = { path = "crates/opentalk-types-signaling-shared-folder", version = "0.29.0-alpha" }
opentalk-types-signaling-subroom-audio = { path = "crates/opentalk-types-signaling-subroom-audio", version = "0.29.0-alpha" }
opentalk-types-signaling-timer = { path = "crates/opentalk-types-signaling-timer", version = "0.29.0-alpha" }
opentalk-types-signaling-whiteboard = { path = "crates/opentalk-types-signaling-whiteboard", version = "0.29.0-alpha" }

actix-http = "3"
actix-rt = "2"
actix-web = { version = "4", default-features = true }
actix-web-httpauth = "0.8"
anstream = "0.6"
arc-swap = "1"
async-trait = "0.1"
aws-sdk-s3 = { version = "1.24.0", features = ["behavior-version-latest"] }
axum = "0.8"
base64 = "0.22"
bigdecimal = "0.4"
bincode = "1"
bytes = "1"
bytestring = "1"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
derive_more = "1.0"
diesel = "2"
diesel-async = "0.5"
either = "1"
email_address = "0.2.4"
env_logger = "0.11"
futures = "0.3"
http = "1"
http-request-derive = { version = "0.3.1", default-features = false }
http0 = { version = "0", package = "http" }
itertools = "0.14"
lapin = { version = "2", default-features = false }
lapin-pool = "0.1"
log = "0.4"
md5 = "0.7"
openidconnect = "3"
opentalk-diesel-newtype = "0.13"
opentalk-etherpad-client = { version = "0.2.0", default-features = false, features = [
  "rustls-tls-native-roots",
] }
opentalk-keycloak-admin = { version = "0.3.0", default-features = false, features = [
  "rustls-tls-native-roots",
] }
opentalk-nextcloud-client = { version = "0.2.0", default-features = false, features = [
  "rustls-tls-native-roots",
] }
opentalk-version = "0.1.1"
opentelemetry = { version = "0.27", default-features = false, features = [
  "metrics",
  "trace",
] }
owo-colors = "4"
parking_lot = "0.12"
phonenumber = "0.3"
pretty_assertions = "1"
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
rand = "0.8"
redis = "0.27"
redis-args = "0.17"
reqwest = { version = "0.12", default-features = false }
reqwest11 = { package = "reqwest", version = "0.11", default-features = false }
rustc-hash = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_with = "3.8"
serial_test = "3"
snafu = "0.8"
strum = { version = "0.26", features = ["derive"] }
syn = "2"
terdoc-client = { version = "0.1.1", default-features = false }
tokio = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tracing = "0.1"
url = "2"
utoipa = "5"
utoipa-swagger-ui = "8"
uuid = "1"
validator = { version = "0.19", features = ["derive"] }
yaml-rust2 = "0.9.0"

[workspace.dependencies.casbin]
default-features = false
git = "https://github.com/kbalt/casbin-rs.git"
rev = "fddb52d61385913727e24a5c7337eed489cb0d56"

[workspace.lints.clippy]
self_named_module_files = "deny"
