# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.package]
authors = ["OpenTalk Team <mail@opentalk.eu>"]
homepage = "https://opentalk.eu/"
repository = "https://gitlab.opencode.de/opentalk/controller"
version = "0.29.0-alpha"

[workspace.dependencies]
kustos = { path = "crates/kustos", version = "0.29.0-alpha" }
opentalk-cache = { path = "crates/opentalk-cache", version = "0.29.0-alpha" }
opentalk-community-signaling-modules = { path = "crates/opentalk-community-signaling-modules", version = "0.29.0-alpha" }
opentalk-controller-core = { path = "crates/opentalk-controller-core", version = "0.29.0-alpha" }
opentalk-controller-service = { path = "crates/opentalk-controller-service", version = "0.29.0-alpha" }
opentalk-controller-service-facade = { path = "crates/opentalk-controller-service-facade", version = "0.29.0-alpha" }
opentalk-controller-settings = { path = "crates/opentalk-controller-settings", version = "0.29.0-alpha" }
opentalk-controller-utils = { path = "crates/opentalk-controller-utils", version = "0.29.0-alpha" }
opentalk-database = { path = "crates/opentalk-database", version = "0.29.0-alpha" }
opentalk-db-storage = { path = "crates/opentalk-db-storage", version = "0.29.0-alpha" }
opentalk-jobs = { path = "crates/opentalk-jobs", version = "0.29.0-alpha" }
opentalk-log = { path = "crates/opentalk-log", version = "0.29.0-alpha" }
opentalk-r3dlock = { path = "crates/opentalk-r3dlock", version = "0.29.0-alpha" }
opentalk-report-generation = { path = "crates/opentalk-report-generation", version = "0.29.0-alpha" }
opentalk-signaling-core = { path = "crates/opentalk-signaling-core", version = "0.29.0-alpha" }
opentalk-signaling-module-chat = { path = "crates/opentalk-signaling-module-chat", version = "0.29.0-alpha" }
opentalk-signaling-module-core = { path = "crates/opentalk-signaling-module-core", version = "0.29.0-alpha" }
opentalk-signaling-module-integration = { path = "crates/opentalk-signaling-module-integration", version = "0.29.0-alpha" }
opentalk-signaling-module-livekit = { path = "crates/opentalk-signaling-module-livekit", version = "0.29.0-alpha" }
opentalk-signaling-module-meeting-notes = { path = "crates/opentalk-signaling-module-meeting-notes", version = "0.29.0-alpha" }
opentalk-signaling-module-meeting-report = { path = "crates/opentalk-signaling-module-meeting-report", version = "0.29.0-alpha" }
opentalk-signaling-module-polls = { path = "crates/opentalk-signaling-module-polls", version = "0.29.0-alpha" }
opentalk-signaling-module-shared-folder = { path = "crates/opentalk-signaling-module-shared-folder", version = "0.29.0-alpha" }
opentalk-signaling-module-subroom-audio = { path = "crates/opentalk-signaling-module-subroom-audio", version = "0.29.0-alpha" }
opentalk-signaling-module-timer = { path = "crates/opentalk-signaling-module-timer", version = "0.29.0-alpha" }
opentalk-signaling-module-training-participation-report = { path = "crates/opentalk-signaling-module-training-participation-report", version = "0.29.0-alpha" }
opentalk-signaling-module-whiteboard = { path = "crates/opentalk-signaling-module-whiteboard", version = "0.29.0-alpha" }
opentalk-test-util = { path = "crates/opentalk-test-util", version = "0.29.0-alpha" }

actix-http = "3"
actix-rt = "2"
actix-web = { version = "4", default-features = true }
actix-web-httpauth = "0.8"
anstream = "0.6"
arc-swap = "1"
async-stream = "0.3"
async-trait = "0.1"
aws-sdk-s3 = { version = "1.24.0", features = ["behavior-version-latest"] }
axum = "0.8"
base64 = "0.22"
bigdecimal = "0.4"
bincode = "1"
bytes = "1"
bytestring = "1"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
derive_more = "2.0"
diesel = "2"
diesel-async = "0.5"
either = "1"
env_logger = "0.11"
futures = "0.3"
futures-core = "0.3"
http = "1"
http-request-derive = { version = "0.3.1", default-features = false }
http0 = { version = "0", package = "http" }
insta = "1"
itertools = "0.14"
jsonwebtoken = "9.3"
kustos-shared = "0.31"
lapin = { version = "2", default-features = false }
lapin-pool = "0.1"
log = "0.4"
md5 = "0.7"
openidconnect = "3"
opentalk-client-shared = "0.30"
opentalk-diesel-newtype = "0.13"
opentalk-etherpad-client = { version = "0.2.0", default-features = false, features = [
  "rustls-tls-native-roots",
] }
opentalk-keycloak-admin = { version = "0.3.0", default-features = false, features = [
  "rustls-tls-native-roots",
] }
opentalk-mail-worker-protocol = "0.32"
opentalk-nextcloud-client = { version = "0.2.0", default-features = false, features = [
  "rustls-tls-native-roots",
] }
opentalk-types-api-v1 = "0.33"
opentalk-types-common = "0.32"
opentalk-types-signaling = "0.32"
opentalk-types-signaling-breakout = "0.32"
opentalk-types-signaling-chat = "0.32"
opentalk-types-signaling-control = "0.32"
opentalk-types-signaling-livekit = "0.32"
opentalk-types-signaling-meeting-notes = "0.32"
opentalk-types-signaling-meeting-report = "0.32"
opentalk-types-signaling-moderation = "0.32"
opentalk-types-signaling-polls = "0.32"
opentalk-types-signaling-recording = "0.32"
opentalk-types-signaling-recording-service = "0.32"
opentalk-types-signaling-shared-folder = "0.32"
opentalk-types-signaling-subroom-audio = "0.32"
opentalk-types-signaling-timer = "0.32"
opentalk-types-signaling-training-participation-report = "0.2"
opentalk-types-signaling-whiteboard = "0.32"
opentalk-version = "0.1.1"
opentelemetry = { version = "0.27", default-features = false, features = [
  "metrics",
  "trace",
] }
owo-colors = "4"
parking_lot = "0.12"
pdf-extract = "0.8"
phonenumber = "0.3"
pretty_assertions = "1"
rand = "0.8"
redis = "0.29"
redis-args = "0.19"
reqwest = { version = "0.12", default-features = false }
reqwest11 = { package = "reqwest", version = "0.11", default-features = false }
ring = "0.17"
rrule = "0.13"
rustc-hash = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serial_test = "3"
snafu = "0.8"
strum = { version = "0.27", features = ["derive"] }
tokio = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tracing = "0.1"
url = "2"
utoipa = "5"
utoipa-swagger-ui = "9"
uuid = "1"
yaml-rust2 = "0.10.0"

[workspace.dependencies.casbin]
default-features = false
git = "https://github.com/kbalt/casbin-rs.git"
rev = "fddb52d61385913727e24a5c7337eed489cb0d56"

[workspace.lints.clippy]
self_named_module_files = "deny"
