# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../crates//database", package = "opentalk-database" }
db-storage = { path = "../crates/db-storage", package = "opentalk-db-storage" }

tokio = { workspace = true, features = ["macros"] }
clap = { workspace = true, features = ["env"] }
anyhow.workspace = true
url.workspace = true
cargo_metadata = { version = "0.18" }
devx-cmd = { version = "0.5.0" }
unified-diff = { version = "0.2.1" }

log.workspace = true
env_logger.workspace = true
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }

rand.workspace = true
