# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentalk-database.workspace = true
opentalk-db-storage.workspace = true

cargo_metadata = { version = "0.18" }
clap = { workspace = true, features = ["env"] }
devx-cmd = { version = "0.5.0" }
diesel = { workspace = true }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
env_logger.workspace = true
log.workspace = true
rand.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros"] }
unified-diff = { version = "0.2.1" }
url.workspace = true
