# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "OpenTalk caching of redis data in local memory"
documentation = "https://docs.rs/opentalk-cache"
edition = "2021"
homepage.workspace = true
license = "EUPL-1.2"
name = "opentalk-cache"
publish = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bincode.workspace = true
moka = { version = "0.12", default-features = false, features = [
  "atomic64",
  "future",
  "quanta",
] }
redis = { workspace = true, features = ["connection-manager", "tokio-comp"] }
serde.workspace = true
siphasher = "1.0"
snafu.workspace = true
