# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "ci-doc-updater"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
glob = "0.3"
once_cell = "1"
regex = "1"

[dev-dependencies]
pretty_assertions.workspace = true
