# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
edition = "2021"
license = "EUPL-1.2"
name = "ci-doc-updater"
publish = false
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
glob = "0.3"
once_cell = "1"
regex = "1"
snafu.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
