# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-client-shared-impl"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = true
description = "Derive macro implementations for opentalk-client-shared"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { workspace = true, features = ["extra-traits", "parsing"] }
proc-macro2 = "1"
proc-macro-crate = "3"
opentalk-proc-macro-fields-helper = { path = "../proc-macro-fields-helper" }
http.workspace = true

[dev-dependencies]
serde.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # is used in doctests
    "serde",
]
