# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-client-shared"
documentation = "https://docs.rs/opentalk-client-shared"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
publish = true
description = "Types and traits that are used by the OpenTalk client library crate"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
client-shared-impl = { package = "opentalk-client-shared-impl", path = "../client-shared-impl" }
derive_more.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_url_params = { version = "0.2" }
thiserror.workspace = true
url.workspace = true

[features]

[dev-dependencies]
