# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-client"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false
description = "OpenTalk client library"

[dependencies]
async-trait.workspace = true
http-request-derive.workspace = true
http.workspace = true
opentalk-client-shared.workspace = true
opentalk-types = { workspace = true, features = ["frontend"] }
snafu.workspace = true
reqwest.workspace = true
url.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
