# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
description = "OpenTalk client library"
edition = "2021"
license = "EUPL-1.2"
name = "opentalk-client"
publish = false
version.workspace = true

[dependencies]
async-trait.workspace = true
http.workspace = true
http-request-derive.workspace = true
opentalk-client-shared.workspace = true
opentalk-types = { workspace = true, features = ["frontend"] }
reqwest.workspace = true
snafu.workspace = true
url.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
