# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-community-modules"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
controller = { path = "../controller", package = "opentalk-controller-core" }
signaling-core = { path = "../signaling-core", package = "opentalk-signaling-core" }

janus-media = { path = "../janus-media", package = "opentalk-janus-media" }
chat = { path = "../chat", package = "opentalk-chat" }
core = { path = "../core", package = "opentalk-core" }
polls = { path = "../polls", package = "opentalk-polls" }
kustos = { path = "../kustos" }
protocol = { path = "../protocol", package = "opentalk-protocol" }
shared_folder = { path = "../shared-folder", package = "opentalk-shared-folder" }
timer = { path = "../timer", package = "opentalk-timer" }
whiteboard = { path = "../whiteboard", package = "opentalk-whiteboard" }
