# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors.workspace = true
edition = "2021"
license = "EUPL-1.2"
name = "opentalk-community-modules"
publish = false
version.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
opentalk-signaling-core.workspace = true

opentalk-chat.workspace = true
opentalk-core.workspace = true
opentalk-integration.workspace = true
opentalk-livekit.workspace = true
opentalk-meeting-notes.workspace = true
opentalk-meeting-report.workspace = true
opentalk-polls.workspace = true
opentalk-shared-folder.workspace = true
opentalk-timer.workspace = true
opentalk-whiteboard.workspace = true

async-trait.workspace = true
